plugins {
    id 'java-library'
    id 'maven-publish'
    id 'idea'
    id 'net.neoforged.moddev.legacyforge' version '2.0.141'
}

version = mod_version
group = mod_group_id

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

boolean isRunningInIdea = System.getProperty("idea.active") == "true"

legacyForge {
    version = project.minecraft_version + '-' + project.forge_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    accessTransformers = project.files('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        client {
            client()
            systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
        }
        server {
            server()
            programArgument '--nogui'
            systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
        }
        data {
            data()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }
        configureEach {
            systemProperties.putAll([
                    'forge.logging.markers'    : 'REGISTRIES',
                    'geckolib.disable_examples': 'true'
            ])
            logLevel = org.slf4j.event.Level.DEBUG
            jvmArguments.addAll([
                    "-XX:+IgnoreUnrecognizedVMOptions",
                    "-XX:+AllowEnhancedClassRedefinition"
            ])
            if (isRunningInIdea) {
                systemProperty "terminal.jline", "true"
            }
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

configurations {
    runtimeClasspath.extendsFrom localRuntime
}
obfuscation {
    createRemappingConfiguration(configurations.localRuntime)
}

repositories {
    mavenLocal()
    maven {
        url = "https://www.cursemaven.com"
    }
    maven {
        name = "Jared's maven"
        url = "https://maven.blamejared.com/"
    }
    maven {
        name = "ModMaven"
        url = "https://modmaven.dev"
    }
    maven {
        name = 'GeckoLib'
        url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
    }
    maven {
        name "org.confluenceReleases"
        url "https://maven.confluence.ink/releases"
    }
    maven {
        name "org.confluenceSnapshots"
        url "https://maven.confluence.ink/snapshots"
    }
}

boolean slim = true

dependencies {
    modImplementation project(":PortLib")
    interfaceInjectionData("org.mesdag:PortLib:${portlib_version}")

    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:0.5.3"))
    if (slim) {
        implementation("io.github.llamalad7:mixinextras-forge:0.5.3")
    } else {
        implementation(jarJar("io.github.llamalad7:mixinextras-forge:0.5.3"))
    }
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'

    modCompileOnly("software.bernie.geckolib:geckolib-forge-${minecraft_version}:${geckolib_version}")
    modCompileOnly("com.eliotlash.mclib:mclib:20")
    modCompileOnly("org.mesdag:ParticleStorm-forge-${minecraft_version}:${particlestorm_version}")
    if (true) {
        modRuntimeOnly("software.bernie.geckolib:geckolib-forge-${minecraft_version}:${geckolib_version}")
        modRuntimeOnly("org.mesdag:ParticleStorm-forge-${minecraft_version}:${particlestorm_version}")
    }
}

mixin {
    add sourceSets.main, "${mod_id}.refmap.json"
    config "${mod_id}.mixins.json"
    config "${mod_id}.animation.mixins.json"
}

jar {
    manifest.attributes([
            "MixinConfigs": "${mod_id}.mixins.json,${mod_id}.animation.mixins.json"
    ])
}

tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            forge_version          : forge_version,
            forge_version_range    : forge_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/mods.toml']) {
        expand replaceProperties
    }
}

java.withSourcesJar()

ext {
    releasesUrl = "https://maven.confluence.ink/releases"
    snapshotsUrl = "https://maven.confluence.ink/snapshots"
}
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            name = "Confluence"
            url = version.toString().endsWith("SNAPSHOT") ? snapshotsUrl : releasesUrl
            credentials {
                username = System.getenv("MAGIC_TEAM_USERNAME")
                password = System.getenv("MAGIC_TEAM_TOKEN")
            }
        }
    }
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs.addAll(['--enable-preview', '-Xlint:preview'])
}

tasks.withType(JavaExec).configureEach {
    jvmArgs '--enable-preview'
}

tasks.withType(Test).configureEach {
    jvmArgs '--enable-preview'
}

tasks.register('runLangMerger', JavaExec) {
    group = 'mod development/internal'
    description = 'Language Merger'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'org.confluence.lib.util.lang.LangMerger'
    args "../"
}

tasks.register('runLangDistinctor', JavaExec) {
    group = 'mod development/internal'
    description = 'Language Distinctor'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'org.confluence.lib.util.lang.LangDistinctor'
    args "../"
}
